GKE/clusterIPExample/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-container
    image: curlimages/curl:latest
    command: ["sleep", "infinity"]
