GKE/clusterIPExample/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
