GKE/clusterIPExample/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  clusterIP: None
  selector:
    app: web
  ports:
  - protocol: TCP
    name: web
    port: 80
